[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dbmd"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncpg>=0.30.0",
    "click>=8.0",
    "oracledb>=3.4.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]

[project.scripts]
dbmd = "cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["dbmd*"]
